# python-sandbox

otel/: __task__.py  docker-compose.yml
otel/worker/: Dockerfile.dev  pyproject.toml
otel/worker/src/worker/: service.py
