[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worker"
version = "1.0.0"
dependencies = [
    "aiohttp",
    "pydantic",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "flake8", "pyproject-flake8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.flake8]
max-line-length = 90
